# minesweeper

./: .gitmodules  Dockerfile  README.md  TRAINING_README.md  create_taskset.py  hf.py  hud.lock.yaml  inferencetest.py  pyproject.toml  quick_test.py  reward_demo.py  sim.py  test_reward.py  test_setup.py  train_minesweeper.py
configs/: minesweeper.yaml  vllm.yaml
minesweeper_taskset/: data-00000-of-00001.arrow  data-00000-of-00001.schema.json  dataset_info.json  state.json
src/hud_controller/: context.py  minesweeper.py  server.py
wandb/: latest-run
wandb/run-20250826_232404-3hj5ezcx/: run-3hj5ezcx.wandb
wandb/run-20250826_232404-3hj5ezcx/files/: wandb-metadata.json
wandb/run-20250826_232616-sm432zxf/: run-sm432zxf.wandb
wandb/run-20250826_232616-sm432zxf/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20250826_233444-sh4yaznx/: run-sh4yaznx.wandb
wandb/run-20250826_233444-sh4yaznx/files/: config.yaml  (+1 more)
wandb/run-20250826_234449-eelq2h2d/: run-eelq2h2d.wandb
wandb/run-20250826_234609-pwl3srjc/: run-pwl3srjc.wandb
wandb/run-20250826_235054-hdc8vd64/: run-hdc8vd64.wandb
wandb/run-20250826_235418-kqrx8in8/: run-kqrx8in8.wandb
wandb/run-20250827_000359-kazicyd4/: run-kazicyd4.wandb
wandb/run-20250827_000543-i2luz11k/: run-i2luz11k.wandb
wandb/run-20250827_001942-wqs4p8pn/: run-wqs4p8pn.wandb
wandb/run-20250827_003213-di4wtv5o/: run-di4wtv5o.wandb
wandb/run-20250827_003306-n9ap937g/: run-n9ap937g.wandb
wandb/run-20250827_005523-8246ka8q/: run-8246ka8q.wandb
wandb/run-20250827_011135-kchto9l0/: run-kchto9l0.wandb
(+29 files in other folders)
